Adicionado style, centraliza texto

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Wtimeis</title>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<link rel="stylesheet" href="index.css">
 </head>
 <body>
-	<p>What time is it?</p>
+	<h3>What time is it?</h3>
 	<p id="time"></p>
 
 	<script src="index.js"></script>
