Add card e alterado cor da letra

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
-	<h3>What time is it?</h3>
-	<p id="time"></p>
+	<div class="card">
+		<h3>What time is it?</h3>
+		<p id="time"></p>
+	</div>
 
 	<script src="index.js"></script>
 </body>
