Corrected when minutes is greater than 45

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="card">
-		<h3>What time is it bi'?</h3>
+		<h3>What time is it?</h3>
 		<p id="time"></p>
 	</div>
 
