Fix function and updated css

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
-	<div class="card">
-		<h3>What time is it?</h3>
-		<p id="time"></p>
+	<div class="card-flex">
+		<div class="card">
+			<h3>What time is it?</h3>
+			<p id="time"></p>
+		</div>
 	</div>
 
 	<script src="index.js"></script>
